--- a/src/app/login/login.template.html
+++ b/src/app/login/login.template.html
@@ -4,7 +4,6 @@
             <h1>Login form</h1>
         </div>
     </div>
-    <div ng-if=""></div>
     <div class="row mx-md-n5 align-items-center">
         <div class="col px-md-5">
             <div class="p-3">
@@ -43,21 +42,22 @@
                         <div ng-show="userForm.passwordInput.$error.minlength" class="invalid-feedback">Password is too short.</div>
                     </div>
                     <button class="btn btn-primary border" ng-disabled="userForm.$invalid">Login</button>
-<!--                    <button class="btn btn-warning cancel">Cancel</button>-->
                     <div ng-class="{ 'alert alert-dismissible fade show mt-2': message, 'alert-success': message.type === 'success', 'alert-danger': message.type === 'error' }"
                          ng-if="message"
                          role="alert">
                         <strong>Notification!</strong> {{message.message}}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <button type="button" ng-click="clearMessage()" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                 </form>
+                <a ng-href="#!/register">Register</a>
             </div>
+
         </div>
         <div class="col px-md-5">
             <div class="p-3">
-                <img src="../app-content/img/welcome-image.jpg" class="responsive-image" alt="">
+                <img src="../../assets/welcome-image.jpg" class="responsive-image" alt="">
             </div>
         </div>
     </div>
