--- a/src/app/components/auth/register/register.html
+++ b/src/app/components/auth/register/register.html
@@ -1,14 +1,16 @@
-<div class="row">
-  <div class="mx-auto">
-    <h1>Registration form</h1>
+<div class="container p-3 mt-5 shadow rounded-sm">
+  <div class="row">
+    <div class="mx-auto">
+      <h1>Registration form</h1>
+    </div>
   </div>
-</div>
-<auth-form
-  user="$ctrl.user"
-  on-submit="$ctrl.createUser($event)"
-  button="Create user"
-  message="{{ $ctrl.error }}">
-</auth-form>
-<div class="row">
-  <a href="" ui-sref="auth.register">Login</a>
+  <auth-form
+    user="$ctrl.user"
+    on-submit="$ctrl.createUser($event)"
+    button="Create user"
+    message="{{ $ctrl.error }}">
+  </auth-form>
+  <div class="row">
+    <a href="" ui-sref="auth.register">Login</a>
+  </div>
 </div>
