json data added

--- a/src/app/components/home/certificates/certificates.html
+++ b/src/app/components/home/certificates/certificates.html
@@ -29,7 +29,7 @@
         Tags:
         <button class="btn btn-warning btn-sm mr-1 ml-1"
                 ng-repeat="tag in $ctrl.queryTags"
-                ng-click="$ctrl.removeQueryTag(tag)">{{tag}}</button>
+                ng-click="$ctrl.removeQueryTag(tag)">{{tag.name}}</button>
       </div>
     </div>
   </div>
