--- a/src/app/components/home/certificate-tag/certificate-tag.html
+++ b/src/app/components/home/certificate-tag/certificate-tag.html
@@ -2,5 +2,5 @@
   Tags:<a href="#"
           ng-repeat="tag in $ctrl.tags"
           class="btn btn-warning btn-sm ml-1 mr-1"
-          ng-click="$ctrl.addTag($index)">{{tag}}</a>
+          ng-click="$ctrl.addTag($index)">{{tag.name}}</a>
 </div>
