--- a/src/app/common/app-nav/app-nav.html
+++ b/src/app/common/app-nav/app-nav.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm">
   <h5 class="my-0 mr-md-auto">Certificates</h5>
   <nav class="my-2 my-md-0 mr-md-3">
-<!--    <a class="p-2 text-dark">{{::$ctrl.user.email}}</a>-->
+    <a class="p-2 text-dark">{{::$ctrl.user.email}}</a>
     <a href="#" ng-click="$ctrl.logout()" class="btn btn-danger">Logout</a>
   </nav>
 </div>
