--- a/src/app/components/home/certificate-tag/certificate-tag.html
+++ b/src/app/components/home/certificate-tag/certificate-tag.html
@@ -1,6 +1,6 @@
 <div class="mb-3" ng-if="$ctrl.tags">
   Tags:<a href="#"
           ng-repeat="tag in $ctrl.tags"
-          class="btn btn-warning btn-sm ml-1 mr-1"
+          class="btn btn-warning btn-sm ml-1 mr-1 mt-1"
           ng-click="$ctrl.addTag($index)">{{tag.name}}</a>
 </div>
