--- a/src/app/components/home/certificate/certificate.html
+++ b/src/app/components/home/certificate/certificate.html
@@ -1,13 +1,13 @@
 <div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title"> {{ $ctrl.certificate.title }}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Date: {{$ctrl.certificate.date | date: "MMM d, yy h:mm a"}}</h6>
-    <p class="card-text">{{ $ctrl.certificate.description }}</p>
-    <certificate-tag
-      tags="$ctrl.certificate.tags"
-      on-add-tag="$ctrl.addTag($event)">
-    </certificate-tag>
-    <a href="#" class="btn btn-danger">Delete</a>
-    <a href="#" class="btn btn-primary">Buy</a>
-  </div>
+    <div class="card-body">
+      <h5 class="card-title"> {{ $ctrl.certificate.title }}</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Date: {{$ctrl.certificate.date | date: "MMM d, yy h:mm a"}}</h6>
+      <p class="card-text">{{ $ctrl.certificate.description }}</p>
+      <certificate-tag
+        tags="$ctrl.certificate.tags"
+        on-add-tag="$ctrl.addTag($event)">
+      </certificate-tag>
+      <a href="#" class="btn btn-primary" ng-click="$ctrl.edit()" ng-if="$ctrl.user && $ctrl.user.isAdmin">Edit</a>
+      <a href="#" class="btn btn-primary" ng-if="$ctrl.user && !$ctrl.user.isAdmin">Buy</a>
+    </div>
 </div>
