--- a/src/app/components/home/certificate-edit-form/certificate-edit-from.html
+++ b/src/app/components/home/certificate-edit-form/certificate-edit-from.html
@@ -67,7 +67,7 @@
         </div>
         <div class="card-body">
           Tags:
-          <button ng-click="$ctrl.deleteTag(tag)" type="button" ng-repeat="tag in $ctrl.certificate.tags" class="btn btn-warning btn-sm mr-1 ml-1">
+          <button ng-click="$ctrl.deleteTag(tag)" type="button" ng-repeat="tag in $ctrl.certificate.tags" class="btn btn-warning btn-sm mr-1 ml-1 mb-1">
             {{tag.name}}
           </button>
         </div>
