--- a/src/app/components/home/certificates/certificates.html
+++ b/src/app/components/home/certificates/certificates.html
@@ -3,16 +3,13 @@
 </div>
 <div class="row justify-content-center align-items-center">
 
-  <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-      Dropdown button
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <a class="dropdown-item" href="#">Something else here</a>
-    </div>
+  <div class="btn-group btn-group-toggle" data-toggle="buttons">
+    <label class="btn btn-outline-primary">
+      <input type="radio" name="options" id="option1" autocomplete="off" checked> All certificates
+    </label>
+    <label class="btn btn-outline-primary">
+      <input type="radio" name="options" id="option2" autocomplete="off"> My certificates
+    </label>
   </div>
 
   <div class="col-4">
