Angularjs filter throught js added, instead html filter. Pagination as separate module edited.

--- a/src/app/components/auth/login/login.html
+++ b/src/app/components/auth/login/login.html
@@ -6,6 +6,7 @@
   </div>
   <auth-form
     user="$ctrl.user"
+    link="$ctrl.link"
     message="{{$ctrl.message}}"
     button="Login"
     on-submit="$ctrl.login($event)">
