--- a/src/app/components/auth/auth-form/auth-form.html
+++ b/src/app/components/auth/auth-form/auth-form.html
@@ -38,6 +38,7 @@
           <div ng-show="userForm.passwordInput.$error.minlength" class="invalid-feedback">Password is too short.</div>
         </div>
         <button type="submit" class="btn btn-primary border" ng-disabled="userForm.$invalid">{{ $ctrl.button }}</button>
+        <a href="" ui-sref="{{$ctrl.link.state}}">{{$ctrl.link.name}}</a>
       </form>
     </div>
   </div>
