--- a/src/app/components/home/certificate-add/certificate-add.html
+++ b/src/app/components/home/certificate-add/certificate-add.html
@@ -1,5 +1,5 @@
 <certificate-edit-form
   certificateId="$ctrl.certificateId"
-  buttonName="Edit"
-  on-submit="$ctrl.updateCertificate($event)">
+  buttonName="Create"
+  on-submit="$ctrl.createCertificate($event)">
 </certificate-edit-form>
