--- a/src/app/components/home/certificate/certificate.html
+++ b/src/app/components/home/certificate/certificate.html
@@ -7,7 +7,11 @@
         tags="$ctrl.certificate.tags"
         on-add-tag="$ctrl.addTag($event)">
       </certificate-tag>
-      <a href="#" class="btn btn-primary" ng-click="$ctrl.edit()" ng-if="$ctrl.user && $ctrl.user.isAdmin">Edit</a>
-      <a href="#" class="btn btn-primary" ng-click="$ctrl.buy()">Buy</a>
+      <a href="#" class="btn btn-primary"
+         ng-click="$ctrl.edit()" ng-if="$ctrl.user && $ctrl.user.isAdmin">Edit</a>
+      <a href="#" class="btn btn-primary"
+         ng-click="$ctrl.buy()" ng-if="$ctrl.user && !$ctrl.isUserHaveThisCertificate">Buy</a>
+      <a href="#" class="btn btn-danger"
+         ng-click="$ctrl.cell()" ng-if="$ctrl.user && $ctrl.isUserHaveThisCertificate">Cell</a>
     </div>
 </div>
