--- a/src/app/components/home/certificates/certificates.html
+++ b/src/app/components/home/certificates/certificates.html
@@ -43,9 +43,9 @@
 </div>
 
 <pagination-component
-  some-field="$ctrl.someField"
   items="$ctrl.items"
-  pageSize="{{$ctrl.pageSize}}"
+  current-page="$ctrl.currentPage"
+  page-size="$ctrl.pageSize"
   on-show-items="$ctrl.showItems($event)">
 </pagination-component>
 
