--- a/src/app/common/app-nav/app-nav.html
+++ b/src/app/common/app-nav/app-nav.html
@@ -2,6 +2,8 @@
   <h5 class="my-0 mr-md-auto">Certificates</h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark">{{::$ctrl.user.email}}</a>
+    <language-component></language-component>
     <a href="#" ng-click="$ctrl.logout()" class="btn btn-danger">Logout</a>
   </nav>
 </div>
+
