--- a/src/app/common/pagination/pagination.html
+++ b/src/app/common/pagination/pagination.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-md-center">
   <ul ng-if="$ctrl.pager.pages.length" class="pagination">
     <li class="page-item" ng-class="{disabled:$ctrl.pager.currentPage === 1}">
-      <a class="page-link" href="#" ng-click="$ctrl.setPage(1)">First</a>
+      <a class="page-link" href="#" ng-click="$ctrl.setPage(1)">{{'BUTTON_FIRST' | translate}}</a>
     </li>
     <li class="page-item" ng-class="{disabled:$ctrl.pager.currentPage === 1}">
       <a class="page-link" href="#" ng-click="$ctrl.setPage($ctrl.pager.currentPage - 1)">Previous</a>
