--- a/src/app/common/app-nav/app-nav.html
+++ b/src/app/common/app-nav/app-nav.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto">Certificates</h5>
+  <h5 class="my-0 mr-md-auto">{{'CERTIFICATES' | translate}}</h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a class="p-2 text-dark">{{::$ctrl.user.email}}</a>
     <language-component></language-component>
-    <a href="#" ng-click="$ctrl.logout()" class="btn btn-danger">Logout</a>
+    <a href="#" ng-click="$ctrl.logout()" class="btn btn-danger">{{'BUTTON_LOGOUT' | translate}}</a>
   </nav>
 </div>
 
