--- a/src/app/common/pagination/pagination.html
+++ b/src/app/common/pagination/pagination.html
@@ -1,19 +1,20 @@
-<div class="row justify-content-md-center">
+<div class="row justify-content-md-center"
+     ng-show="$ctrl.items && $ctrl.items.length > $ctrl.pageSize">
   <ul ng-if="$ctrl.pager.pages.length" class="pagination">
     <li class="page-item" ng-class="{disabled:$ctrl.pager.currentPage === 1}">
       <a class="page-link" href="#" ng-click="$ctrl.setPage(1)">{{'BUTTON_FIRST' | translate}}</a>
     </li>
     <li class="page-item" ng-class="{disabled:$ctrl.pager.currentPage === 1}">
-      <a class="page-link" href="#" ng-click="$ctrl.setPage($ctrl.pager.currentPage - 1)">Previous</a>
+      <a class="page-link" href="#" ng-click="$ctrl.setPage($ctrl.pager.currentPage - 1)">{{'BUTTON_PREV' | translate}}</a>
     </li>
     <li class="page-item" ng-repeat="page in $ctrl.pager.pages" ng-class="{active:$ctrl.pager.currentPage === page}">
       <a class="page-link" href="#" ng-click="$ctrl.setPage(page)">{{page}}</a>
     </li>
     <li class="page-item" ng-class="{disabled:$ctrl.pager.currentPage === $ctrl.pager.totalPages}">
-      <a class="page-link" href="#" ng-click="$ctrl.setPage($ctrl.pager.currentPage + 1)">Next</a>
+      <a class="page-link" href="#" ng-click="$ctrl.setPage($ctrl.pager.currentPage + 1)">{{'BUTTON_NEXT' | translate}}</a>
     </li>
     <li class="page-item" ng-class="{disabled:$ctrl.pager.currentPage === $ctrl.pager.totalPages}">
-      <a class="page-link" href="#" ng-click="$ctrl.setPage($ctrl.pager.totalPages)">Last</a>
+      <a class="page-link" href="#" ng-click="$ctrl.setPage($ctrl.pager.totalPages)">{{'BUTTON_LAST' | translate}}</a>
     </li>
   </ul>
 </div>
