--- a/src/app/components/home/certificate/certificate.html
+++ b/src/app/components/home/certificate/certificate.html
@@ -1,7 +1,7 @@
 <div class="card" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title"> {{ $ctrl.certificate.title }}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Date: {{$ctrl.certificate.date | date: "MMM d, yy h:mm a"}}</h6>
+    <h6 class="card-subtitle mb-2 text-muted">Date: {{ $ctrl.certificate.date | date: "MMM d, yy h:mm a" }}</h6>
     <p class="card-text">{{ $ctrl.certificate.description }}</p>
     <certificate-tag
       tags="$ctrl.certificate.tags"
@@ -9,14 +9,18 @@
     </certificate-tag>
 
     <div class="d-flex bd-highlight mb-3">
-      <a href="#" class="btn btn-primary mr-1 p-2 bd-highlight"
-         ng-click="$ctrl.edit()" ng-if="$ctrl.user && $ctrl.user.isAdmin">{{'BUTTON_EDIT' | translate}}</a>
-      <a href="#" class="btn btn-primary mr-1 p-2 bd-highlight"
-         ng-click="$ctrl.buy()" ng-if="$ctrl.user && !$ctrl.isUserHaveThisCertificate">{{'BUTTON_BUY' | translate}}</a>
-      <a href="#" class="btn btn-danger p-2 bd-highlight"
-         ng-click="$ctrl.cell()" ng-if="$ctrl.user && $ctrl.isUserHaveThisCertificate">{{'BUTTON_CELL' | translate}}</a>
-      <a href="#" class="btn btn-dark ml-auto p-2 bd-highlight"
-         ng-click="$ctrl.delete()" ng-if="$ctrl.user && $ctrl.user.isAdmin">Delete</a>
+      <a href="#" ng-click="$ctrl.edit()"
+         class="btn btn-primary btn-sm mr-1 p-2 bd-highlight"
+         ng-if="$ctrl.user && $ctrl.user.isAdmin">{{'BUTTON_EDIT' | translate}}</a>
+      <a href="#" ng-really-message="{{'BUY_CONFIRM_MESSAGE' | translate}}" ng-really-click="$ctrl.buy()"
+         class="btn btn-primary btn-sm mr-1 p-2 bd-highlight"
+         ng-if="$ctrl.user && !$ctrl.isUserHaveThisCertificate">{{'BUTTON_BUY' | translate}}</a>
+      <a href="#" ng-really-message="{{'CELL_CONFIRM_MESSAGE'| translate}}" ng-really-click="$ctrl.cell()"
+         class="btn btn-danger btn-sm p-2 bd-highlight"
+         ng-if="$ctrl.user && $ctrl.isUserHaveThisCertificate">{{'BUTTON_CELL' | translate}}</a>
+      <a href="#" ng-really-message="{{'DELETE_CONFIRM_MESSAGE' | translate}}" ng-really-click="$ctrl.delete()"
+         class="btn btn-dark btn-sm ml-auto p-2 bd-highlight"
+         ng-if="$ctrl.user && $ctrl.user.isAdmin">{{'BUTTON_DELETE' | translate}}</a>
     </div>
   </div>
 </div>
