Reusable form input field added

--- a/src/app/common/common.html
+++ b/src/app/common/common.html
@@ -1,8 +1,8 @@
 <div>
   <app-nav>
   </app-nav>
-  <div class="container p-3 shadow rounded-sm">
-    <ui-view>
-    </ui-view>
+  <div class="container p-3 shadow rounded-sm" ui-view>
+<!--    <ui-view>-->
+<!--    </ui-view>-->
   </div>
 </div>
