--- a/src/app/components/home/certificate-add/certificate-add.html
+++ b/src/app/components/home/certificate-add/certificate-add.html
@@ -1,5 +1,5 @@
-<certificate-edit-form
-  certificateId="$ctrl.certificateId"
-  buttonName="Create"
-  on-submit="$ctrl.createCertificate($event)">
-</certificate-edit-form>
+<certificate-form
+  action-name="'ADD_CERTIFICATE' | translate"
+  button-name="'BUTTON_ADD' | translate"
+  on-submit="$ctrl.addCertificate($event)">
+</certificate-form>
