--- a/src/app/components/home/certificate-edit/certificate-edit.html
+++ b/src/app/components/home/certificate-edit/certificate-edit.html
@@ -1,5 +1,5 @@
-<certificate-edit-form
-  certificateId="$ctrl.certificateId"
-  buttonName="Edit"
+<certificate-form
+  action-name="'EDIT_CERTIFICATE' | translate"
+  button-name="'BUTTON_EDIT' | translate"
   on-submit="$ctrl.updateCertificate($event)">
-</certificate-edit-form>
+</certificate-form>
