--- a/src/app/common/components/form-field/form-field.html
+++ b/src/app/common/components/form-field/form-field.html
@@ -5,7 +5,7 @@
            type="{{$ctrl.fieldModel.fieldType}}"
            class="form-control"
            id="field"
-           placeholder="Enter {{$ctrl.fieldModel.fieldName}}"
+           placeholder="{{$ctrl.fieldModel.fieldNameKey | translate}}"
            name="inputName"
            ng-model="$ctrl.fieldModel.fieldValue"
            ng-change="$ctrl.update()"
@@ -14,23 +14,23 @@
            ng-attr-ng-maxlength="{{$ctrl.fieldModel.maxLength || undefined}}"
            ng-attr-ng-minlength="{{$ctrl.fieldModel.minLength || undefined}}"
            ng-attr-required="{{$ctrl.fieldModel.required}}"
+           ng-pattern="$ctrl.fieldModel.pattern"
            ui-validate="{userValidation: '$ctrl.validate($value)'}">
 
-    <div ng-if="subform.inputName.$error.maxlength"
-         class="invalid-feedback">
+    <div ng-if="subform.inputName.$error.maxlength" class="invalid-feedback">
       {{'VALIDATION_MAX_LENGTH_MESSAGE' | translate}}{{$ctrl.maxLength}}
     </div>
-    <div ng-if="subform.inputName.$error.minlength"
-         class="invalid-feedback">
+    <div ng-if="subform.inputName.$error.minlength" class="invalid-feedback">
       {{'VALIDATION_MIN_LENGTH_MESSAGE' | translate}}{{$ctrl.minLength}}
     </div>
-    <div ng-if="subform.inputName.$error.userValidation"
-         class="invalid-feedback">
+    <div ng-if="subform.inputName.$error.userValidation" class="invalid-feedback">
       {{'VALIDATION_IS_NOT_CORRECT_MESSAGE' | translate}}
     </div>
-    <div ng-if="subform.inputName.$error.required"
-         class="invalid-feedback">
+    <div ng-if="subform.inputName.$error.required" class="invalid-feedback">
       {{'VALIDATION_REQUIRED_MESSAGE' | translate}}
+    </div>
+    <div ng-if="subform.inputName.$error.pattern" class="invalid-feedback">
+      {{'VALIDATION_IS_NOT_CORRECT_MESSAGE' | translate}}
     </div>
   </ng-form>
 </div>
