--- a/src/app/common/components/confirm-modal/confirm-modal.html
+++ b/src/app/common/components/confirm-modal/confirm-modal.html
@@ -1,14 +1,21 @@
-<div class="modal-header">
-  <h5 class="modal-title" id="exampleModalLabel">{{'CONFIRMATION' | translate}}</h5>
-  <button type="button" class="close" ng-click="$ctrl.cancel()">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-<div class="modal-body">
-  {{$ctrl.bodyMessageKey | translate}}
-</div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-primary" ng-click="$ctrl.ok()">{{'OK' | translate}}</button>
-  <button type="button" class="btn btn-secondary" ng-click="$ctrl.cancel()">{{'CANCEL' | translate}}</button>
-</div>
+<!--<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"-->
+<!--     aria-hidden="true">-->
+<!--  <div class="modal-dialog" role="document">-->
+<!--    <div class="modal-content">-->
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{'CONFIRMATION' | translate}}</h5>
+        <button type="button" class="close" ng-click="$ctrl.cancel()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{$ctrl.bodyMessageKey | translate}}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" ng-click="$ctrl.ok()">{{'OK' | translate}}</button>
+        <button type="button" class="btn btn-secondary" ng-click="$ctrl.cancel()">{{'CANCEL' | translate}}</button>
+      </div>
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
